--- a/src/iokernellang/codesparser.y.in
+++ b/src/iokernellang/codesparser.y.in
@@ -4,8 +4,8 @@
 #include <stdarg.h>
 #include <sys/stat.h>
 #include <fcntl.h>
-#include "CodesIOKernelTypes.h"
-#include "CodesIOKernelContext.h"
+#include "codes/CodesIOKernelTypes.h"
+#include "codes/CodesIOKernelContext.h"
 
 /* prototypes */
 nodeType *opr(int64_t oper, int64_t nops, ...);
