add lp-io-test along with make check rules/script

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,4 +33,5 @@ AM_CXXFLAGS = $(AM_CFLAGS)
 include Make.rules
 
 include $(top_srcdir)/src/Makefile.subdir
+include $(top_srcdir)/tests/Makefile.subdir
 
