add version of jenkins hash used by triton model

--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -59,7 +59,8 @@ nobase_include_HEADERS = \
     codes/codes.h \
     codes/configuration.h \
     codes/dotconf.h \
-    codes/lp-io.h
+    codes/lp-io.h \
+    codes/jenkins-hash.h
 
 src_libcodes_base_a_SOURCES =  \
     codes/codesparser.h \
@@ -99,6 +100,7 @@ src_libcodes_base_a_SOURCES =  \
     src/util/configuration.c \
     src/util/dotconf.c \
     src/util/lp-io.c \
+    src/util/lookup3.c \
     codes/codeslogging.h \
     src/logging/codeslogging.c \
     codes/timeline.h \
