--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,7 @@ AC_SUBST(CODES_BASE_CFLAGS)
 includedir="${includedir}/codes"
 
 AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([tests/modelnet-test.sh],[chmod +x tests/modelnet-test.sh])
 
 AC_OUTPUT
 
