Updates to model-net test program based on the new config file format. We can now configure all network parameters from the config file

--- a/tests/modelnet-test.conf
+++ b/tests/modelnet-test.conf
@@ -7,3 +7,10 @@ LPGROUPS
       modelnet_simplenet="1";
    }
 }
+PARAMS
+{
+   modelnet="simplenet";
+   message_size="256";
+   net_startup_ns="1.5";
+   net_bw_mbps="20000";
+}
