--- a/tests/modelnet-test.conf
+++ b/tests/modelnet-test.conf
@@ -9,8 +9,8 @@ LPGROUPS
 }
 PARAMS
 {
+   packet_size="512";
    modelnet="simplenet";
-   message_size="256";
    net_startup_ns="1.5";
    net_bw_mbps="20000";
 }
