setting minimal routing by default in the config file

--- a/tests/modelnet-test-dragonfly.conf
+++ b/tests/modelnet-test-dragonfly.conf
@@ -25,5 +25,5 @@ PARAMS
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
    message_size="1024";
-   routing="nonminimal";
+   routing="minimal";
 }
