Updates to modelnet (1) Updated the mapping configuration for dragonfly (the mapping now distributes the routers equally on all the PES.  The old dragonly mapping configuration was placing the routers on a single PE which was causing congestion on that PE leading to slow model performance in parallel ) (2) Updated 'make check' to handle dragonfly and torus test cases as well (3) Remove the num_servers argument from model-net test case, the number of servers are now calculated from the config file (4) Placing the ross mapping parameters in the codes mapping file

--- a/tests/modelnet-test.conf
+++ b/tests/modelnet-test.conf
@@ -10,6 +10,7 @@ LPGROUPS
 PARAMS
 {
    packet_size="512";
+   message_size="256";
    modelnet="simplenet";
    net_startup_ns="1.5";
    net_bw_mbps="20000";
