--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -1,8 +1,12 @@
 
 check_PROGRAMS += tests/modelnet-test
 
-TESTS += tests/modelnet-test.sh
-EXTRA_DIST += tests/modelnet-test.sh
+TESTS += tests/modelnet-test.sh \
+	 tests/modelnet-test-torus.sh \
+	 tests/modelnet-test-dragonfly.sh 
+EXTRA_DIST += tests/modelnet-test.sh \
+	      tests/modelnet-test-torus.sh \
+	      tests/modelnet-test-dragonfly.sh
 
 testlib = src/libcodes-net.a
 
