--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -25,14 +25,14 @@ maintainer-clean-local::
 src/modelconfig/configparser.h: src/modelconfig/configparser.y
 src/modelconfig/configlex.h: src/modelconfig/configlex.l
 
-BUILT_SOURCES += src/iokernellang/codesparser.h \
+BUILT_SOURCES += codes/codesparser.h \
 		 src/iokernellang/codesparser.c \
                  src/iokernellang/codeslexer.h \
                  codes/codeslexer.h
 
 
 #src/iokernellang/codesparser.y: src/iokernellang/codesparser.y.in Makefile
-src/iokernellang/codesparser.c src/iokernellang/codesparser.h: src/iokernellang/codesparser.y
+src/iokernellang/codesparser.c codes/codesparser.h: src/iokernellang/codesparser.y
 
 codes/codeslexer.h: src/iokernellang/codeslexer.h
 	mkdir -p codes
