--- a/src/iokernellang/codesparser.y.in
+++ b/src/iokernellang/codesparser.y.in
@@ -56,7 +56,7 @@ int * group_size = NULL;
 %type <nPtr> stmt expr stmt_list
 
 %{
-	#include "CodesIOKernelContext.h"
+	#include "codes/CodesIOKernelContext.h"
 
 	int CodesIOKernel_lex(YYSTYPE * lvalp, YYLTYPE * llocp, void * scanner);
 
