--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -1,5 +1,6 @@
 
-check_PROGRAMS += tests/lp-io-test
+check_PROGRAMS += tests/lp-io-test \
+ tests/codes-workload-test
 
 TESTS += tests/lp-io-test.sh
 EXTRA_DIST += tests/lp-io-test.sh
@@ -9,3 +10,7 @@ testlib = src/libcodes-base.a
 tests_lp_io_test_LDADD = $(testlib) ${ROSS_LIBS}
 tests_lp_io_test_LDFLAGS = ${ROSS_LDFLAGS}
 tests_lp_io_test_SOURCES = tests/lp-io-test.c
+
+tests_codes_workload_test_LDADD = $(testlib) ${ROSS_LIBS}
+tests_codes_workload_test_LDFLAGS = ${ROSS_LDFLAGS}
+tests_codes_workload_test_SOURCES = tests/codes-workload-test.c
