--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -1,6 +1,6 @@
 
 check_PROGRAMS += tests/lp-io-test \
- tests/codes-workload-test
+ tests/workload/codes-workload-test
 
 TESTS += tests/lp-io-test.sh
 EXTRA_DIST += tests/lp-io-test.sh
@@ -11,6 +11,11 @@ tests_lp_io_test_LDADD = $(testlib) ${ROSS_LIBS}
 tests_lp_io_test_LDFLAGS = ${ROSS_LDFLAGS}
 tests_lp_io_test_SOURCES = tests/lp-io-test.c
 
-tests_codes_workload_test_LDADD = $(testlib) ${ROSS_LIBS}
-tests_codes_workload_test_LDFLAGS = ${ROSS_LDFLAGS}
-tests_codes_workload_test_SOURCES = tests/codes-workload-test.c
+tests_workload_codes_workload_test_LDADD = $(testlib) ${ROSS_LIBS}
+tests_workload_codes_workload_test_LDFLAGS = ${ROSS_LDFLAGS}
+tests_workload_codes_workload_test_SOURCES = \
+ tests/workload/codes-workload-test.c \
+ tests/workload/codes-workload-test-svr-lp.c \
+ tests/workload/codes-workload-test-svr-lp.h \
+ tests/workload/codes-workload-test-cn-lp.c \
+ tests/workload/codes-workload-test-cn-lp.h
