--- a/src/models/Makefile.subdir
+++ b/src/models/Makefile.subdir
@@ -11,5 +11,6 @@ src_libcodes_net_a_SOURCES = \
  src/models/networks/model-net/model-net.c \
  src/models/networks/model-net/simplenet-upd.c \
  src/models/networks/model-net/torus.c \
- src/models/networks/model-net/dragonfly.c
+ src/models/networks/model-net/dragonfly.c \
+ src/models/networks/model-net/loggp.c
 
