test harness for loggp stub method
also misc update to how loggp method plugs into modelnet

--- a/configure.ac
+++ b/configure.ac
@@ -69,4 +69,5 @@ AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([tests/modelnet-test.sh],[chmod +x tests/modelnet-test.sh])
 AC_CONFIG_FILES([tests/modelnet-test-dragonfly.sh],[chmod +x tests/modelnet-test-dragonfly.sh])
 AC_CONFIG_FILES([tests/modelnet-test-torus.sh],[chmod +x tests/modelnet-test-torus.sh])
+AC_CONFIG_FILES([tests/modelnet-test-loggp.sh],[chmod +x tests/modelnet-test-loggp.sh])
 AC_OUTPUT([maint/codes-net.pc])
