--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -4,11 +4,13 @@ check_PROGRAMS += tests/modelnet-test tests/modelnet-p2p-bw
 TESTS += tests/modelnet-test.sh \
 	 tests/modelnet-test-torus.sh \
 	 tests/modelnet-test-loggp.sh \
-	 tests/modelnet-test-dragonfly.sh 
+	 tests/modelnet-test-dragonfly.sh \
+	 tests/modelnet-p2p-bw-loggp.sh
 EXTRA_DIST += tests/modelnet-test.sh \
 	      tests/modelnet-test-torus.sh \
 	      tests/modelnet-test-loggp.sh \
-	      tests/modelnet-test-dragonfly.sh
+	      tests/modelnet-test-dragonfly.sh \
+	      tests/modelnet-p2p-bw-loggp.sh
 
 testlib = src/libcodes-net.a
 
