--- a/tests/modelnet-p2p-bw-loggp.sh.in
+++ b/tests/modelnet-p2p-bw-loggp.sh.in
@@ -2,4 +2,4 @@
 
 abs_srcdir=@abs_srcdir@ 
 
-tests/modelnet-p2p-bw --sync=1 -- $abs_srcdir/modelnet-p2p-bw-loggp.conf
+tests/modelnet-p2p-bw --sync=1 -- tests/modelnet-p2p-bw-loggp.conf
