--- a/tests/modelnet-test-loggp.conf.in
+++ b/tests/modelnet-test-loggp.conf.in
@@ -12,5 +12,5 @@ PARAMS
    packet_size="512";
    message_size="256";
    modelnet="loggp";
-   net_config_file="logp-param-table.conf";
+   net_config_file="@abs_srcdir@/ng-mpi-tukey.dat";
 }
