--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -102,4 +102,5 @@ src_libcodes_base_a_SOURCES =  \
     src/logging/timeline.c \
     src/workload/codes-workload.c \
     src/workload/codes-workload-method.h \
+    src/workload/codes-bgp-io-wrkld.c \
     src/workload/test-workload-method.c
