add pre-generated iokernellang parser code
The Bison code breaks in Bison 2.7 or newer.  We don't have any changes
planned for the parser itself in the near term, so this commit adds a
version of the parser generated with Bison 2.5 back to the repo for now.

--- a/configure.ac
+++ b/configure.ac
@@ -103,7 +103,7 @@ AS_IF([test "x$enable_valgrind_clean" = "xyes"], [
 ])
 
 
-AC_CONFIG_FILES([src/iokernellang/codesparser.y])
+dnl AC_CONFIG_FILES([src/iokernellang/codesparser.y])
 
 AC_CONFIG_FILES([Makefile])
 
