--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -103,4 +103,5 @@ src_libcodes_base_a_SOURCES =  \
     src/workload/codes-workload.c \
     src/workload/codes-workload-method.h \
     src/workload/codes-bgp-io-wrkld.c \
+    src/workload/codes-darshan-io-wrkld.c \
     src/workload/test-workload-method.c
