--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,7 @@ $(pkgconfig_DATA): config.status
 
 EXTRA_DIST += prepare.sh
 
-AM_CPPFLAGS = -I$(top_srcdir)/src ${ROSS_CPPFLAGS}
+AM_CPPFLAGS = -I$(top_srcdir)/src ${ROSS_CPPFLAGS} ${DARSHAN_CPPFLAGS}
 
 AM_CFLAGS = ${ROSS_CFLAGS}
 
@@ -35,3 +35,6 @@ include Make.rules
 include $(top_srcdir)/src/Makefile.subdir
 include $(top_srcdir)/tests/Makefile.subdir
 
+if USE_DARSHAN
+src_libcodes_base_a_SOURCES += src/workload/codes-darshan-io-wrkld.c
+endif
