small changes to darshan workload api as well as tests Makefile

--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -1,6 +1,7 @@
 
 check_PROGRAMS += tests/lp-io-test \
- tests/workload/codes-workload-test
+ tests/workload/codes-workload-test \
+ tests/workload/codes-workload-mpi-replay
 
 TESTS += tests/lp-io-test.sh \
  tests/workload/codes-workload-test.sh
@@ -14,6 +15,10 @@ tests_lp_io_test_LDADD = $(testlib) ${ROSS_LIBS}
 tests_lp_io_test_LDFLAGS = ${ROSS_LDFLAGS}
 tests_lp_io_test_SOURCES = tests/lp-io-test.c
 
+tests_workload_codes_workload_mpi_replay_LDADD = $(testlib) ${ROSS_LIBS}
+tests_workload_codes_workload_mpi_replay_LDFLAGS = ${ROSS_LDFLAGS}
+tests_workload_codes_workload_mpi_replay_SOURCES = tests/workload/codes-workload-mpi-replay.c
+
 tests_workload_codes_workload_test_LDADD = $(testlib) ${ROSS_LIBS}
 tests_workload_codes_workload_test_LDFLAGS = ${ROSS_LDFLAGS}
 tests_workload_codes_workload_test_SOURCES = \
@@ -21,4 +26,4 @@ tests_workload_codes_workload_test_SOURCES = \
  tests/workload/codes-workload-test-svr-lp.c \
  tests/workload/codes-workload-test-svr-lp.h \
  tests/workload/codes-workload-test-cn-lp.c \
- tests/workload/codes-workload-test-cn-lp.h
+ tests/workload/codes-workload-test-cn-lp.h 
