--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -24,6 +24,5 @@ tests_workload_codes_workload_test_SOURCES = \
  tests/workload/codes-workload-test-cn-lp.c \
  tests/workload/codes-workload-test-cn-lp.h 
 
-tests_workload_codes_workload_mpi_replay_LDADD = $(testlib) ${ROSS_LIBS}
-tests_workload_codes_workload_mpi_replay_LDFLAGS = ${ROSS_LDFLAGS}
+tests_workload_codes_workload_mpi_replay_LDADD = $(testlib)
 tests_workload_codes_workload_mpi_replay_SOURCES = tests/workload/codes-workload-mpi-replay.c
