Fix build issues with linking with darshan
Now, specify the darshan install directory with --with-darshan=/dir/
to build the darshan workload generator and link it with test
applications.

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,8 +36,12 @@ include $(top_srcdir)/src/Makefile.subdir
 include $(top_srcdir)/tests/Makefile.subdir
 
 if USE_DARSHAN
-src_libcodes_base_a_SOURCES += src/workload/codes-darshan-io-wrkld.c
 AM_CPPFLAGS += ${DARSHAN_CPPFLAGS}
 AM_LDFLAGS = ${DARSHAN_LDFLAGS}
 AM_LIBS += ${DARSHAN_LIBS}
+src_libcodes_base_a_SOURCES += src/workload/codes-darshan-io-wrkld.c
+tests_workload_codes_workload_test_LDADD += ${DARSHAN_LIBS}
+tests_workload_codes_workload_test_LDFLAGS += ${DARSHAN_LDFLAGS}
+tests_workload_codes_workload_mpi_replay_LDADD += ${DARSHAN_LIBS}
+tests_workload_codes_workload_mpi_replay_LDFLAGS += ${DARSHAN_LDFLAGS}
 endif
