Update to testing directory config file and test programs
The codes-workload-test and codes-workload-mpi-replay both support
the new paramters of the bgp-io language workload generator. Also,
support has been added to the config file and codes-workload-mpi-replay
program for loading the parameters of a darshan config file.

--- a/tests/workload/codes-workload-test.conf
+++ b/tests/workload/codes-workload-test.conf
@@ -1,12 +1,19 @@
-#PARAMS
-#{
-#    workload_type = "bgp_io_workload";
-#    io_kernel_meta_path = "/home/mubarm/codes_radix/codes-base/tests/workload/hybrid.meta.txt";
-#    bgp_config_file = "/home/mubarm/codes_radix/codes-base/tests/workload/bgp.base.config";
-#}
-
 PARAMS
 {
-    workload_type = "test";
+    workload_type = "bgp_io_workload";
+    io_kernel_meta_path = "/home/shane/software/codes/wkld_test/meta.txt";
+    bgp_config_file = "/home/shane/software/codes/wkld_test/bgp.base.config.txt";
+    rank_count = "8";
 }
 
+#PARAMS
+#{
+#    workload_type = "test";
+#}
+
+#PARAMS
+#{
+#    workload_type = "darshan_io_workload";
+#    log_file_path = "home/shane/software/darshan/logs/ior/snyder_ior_id185053_4rank_uniq.darshan.gz";
+#    aggregator_count = "1";
+#}
