--- a/tests/workload/codes-workload-test.conf
+++ b/tests/workload/codes-workload-test.conf
@@ -1,15 +1,15 @@
-PARAMS
-{
-    workload_type = "bgp_io_workload";
-    io_kernel_meta_path = "/home/shane/software/codes/wkld_test/meta.txt";
-    bgp_config_file = "/home/shane/software/codes/wkld_test/bgp.base.config.txt";
-    rank_count = "8";
-}
-
 #PARAMS
 #{
-#    workload_type = "test";
+#    workload_type = "bgp_io_workload";
+#    io_kernel_meta_path = "/home/shane/software/codes/wkld_test/meta.txt";
+#    bgp_config_file = "/home/shane/software/codes/wkld_test/bgp.base.config.txt";
+#    rank_count = "8";
 #}
+
+PARAMS
+{
+    workload_type = "test";
+}
 
 #PARAMS
 #{
