minor changes to model-net plug-in: (1) making the torus network's chunk size configurable (2) handling some edge cases which we haven't encountered so far but its good to have them for future

--- a/tests/conf/modelnet-test-torus.conf
+++ b/tests/conf/modelnet-test-torus.conf
@@ -11,10 +11,11 @@ PARAMS
 {
    packet_size="512";
    modelnet="torus";
-   message_size="512";
+   message_size="2048";
    n_dims="4";
    dim_length="4,2,2,2";
    link_bandwidth="2.0";
-   buffer_size="256";
+   buffer_size="16384";
    num_vc="1";
+   chunk_size="32";
 }
