--- a/Makefile.am
+++ b/Makefile.am
@@ -36,12 +36,10 @@ include $(top_srcdir)/src/Makefile.subdir
 include $(top_srcdir)/tests/Makefile.subdir
 
 if USE_DARSHAN
-AM_CPPFLAGS += ${DARSHAN_CPPFLAGS}
+AM_CPPFLAGS += ${DARSHAN_CFLAGS}
 src_libcodes_base_a_SOURCES += src/workload/codes-darshan-io-wrkld.c
 tests_workload_codes_workload_test_LDADD += ${DARSHAN_LIBS}
-tests_workload_codes_workload_test_LDFLAGS += ${DARSHAN_LDFLAGS}
 tests_workload_codes_workload_mpi_replay_LDADD += ${DARSHAN_LIBS}
-tests_workload_codes_workload_mpi_replay_LDFLAGS += ${DARSHAN_LDFLAGS}
 endif
 
 if USE_RECORDER
