--- a/maint/codes-base.pc.in
+++ b/maint/codes-base.pc.in
@@ -6,13 +6,12 @@ ross_cflags=@ROSS_CFLAGS@
 ross_ldflags=@ROSS_LDFLAGS@
 ross_libs=@ROSS_LIBS@
 darshan_libs=@DARSHAN_LIBS@
-darshan_cflags=@DARSHAN_CPPFLAGS@
-darshan_ldflags=@DARSHAN_LDFLAGS@
+darshan_cflags=@DARSHAN_CFLAGS@
 
 Name: codes-base
 Description: Base functionality for CODES storage simulation
 Version: @CODES_BASE_VERSION@
 URL: http://trac.mcs.anl.gov/projects/CODES
 Requires:
-Libs: -L${libdir} -lcodes-base ${ross_ldflags} ${ross_libs} ${darshan_ldflags} ${darshan_libs}
+Libs: -L${libdir} -lcodes-base ${ross_ldflags} ${ross_libs} ${darshan_libs}
 Cflags: -I${includedir} ${ross_cflags} ${darshan_cflags}
