Final changes to build/use darshan workload api

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,7 @@ include $(top_srcdir)/src/Makefile.subdir
 include $(top_srcdir)/tests/Makefile.subdir
 
 if USE_DARSHAN
-AM_CPPFLAGS += ${DARSHAN_CFLAGS}
+AM_CPPFLAGS += ${DARSHAN_CFLAGS} "-DUSE_DARSHAN=1"
 src_libcodes_base_a_SOURCES += src/workload/codes-darshan-io-wrkld.c
 tests_workload_codes_workload_test_LDADD += ${DARSHAN_LIBS}
 tests_workload_codes_workload_mpi_replay_LDADD += ${DARSHAN_LIBS}
