Adding readme file for the dragonfly model + some minor changes in dragonfly

--- a/tests/conf/modelnet-test-dragonfly.conf
+++ b/tests/conf/modelnet-test-dragonfly.conf
@@ -14,6 +14,7 @@ PARAMS
    modelnet="dragonfly";
    # scheduler options
    modelnet_scheduler="fcfs";
+   chunk_size="32";
    # modelnet_scheduler="round-robin";
    num_vcs="1";
    num_routers="4";
